WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138314
RenderLayerModelObject shouldn't need a pre-destructor hook.
https://bugs.webkit.org/show_bug.cgi?id=138314
Summary
RenderLayerModelObject shouldn't need a pre-destructor hook.
Andreas Kling
Reported
2014-11-03 09:49:05 PST
RenderLayerModelObject shouldn't need a willBeDestroyed() hook, since it has no need to call virtuals or walk the tree during destruction.
Attachments
Patch
(2.77 KB, patch)
2014-11-03 09:50 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-11-03 09:50:55 PST
Created
attachment 240859
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-03 10:39:10 PST
Comment on
attachment 240859
[details]
Patch Clearing flags on attachment: 240859 Committed
r175475
: <
http://trac.webkit.org/changeset/175475
>
WebKit Commit Bot
Comment 3
2014-11-03 10:39:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug