RenderLayerModelObject shouldn't need a pre-destructor hook. <https://webkit.org/b/138314>

Reviewed by Antti Koivisto.

Move code from the willBeDestroyed() pre-destructor hook to the regular
~RenderLayerModelObject() destructor.

We just need to unregister the renderer from the FrameView's set of
viewport-constrained objects. That doesn't require being able to walk
the render tree or call virtuals, which is the main reason you'd use
willBeDestroyed().

* rendering/RenderLayerModelObject.cpp:
(WebCore::RenderLayerModelObject::~RenderLayerModelObject):
(WebCore::RenderLayerModelObject::willBeDestroyed): Deleted.
* rendering/RenderLayerModelObject.h:


Canonical link: https://commits.webkit.org/156146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175475 268f45cc-cd09-0410-ab3c-d52691b4dbfc